General UI changes Made the table of contents sit beside and move with scroll on wider screens. Fixed the nav links not wrapping on narrower displays.

--- a/assets/css/common/header.css
+++ b/assets/css/common/header.css
@@ -60,6 +60,9 @@ button#theme-toggle {
 }
 
 #menu {
+    display: flex;
+    flex-wrap: wrap;
+    align-content: flex-start;
     list-style: none;
     word-break: keep-all;
     overflow-x: auto;
